--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Esta es una celda Markdown, es texto que no se ejecuta. Además sirve para añadir notas durante el proyecto.\n",
-    "Apuntes: Python trabaja con un kernel(guarda variables, listas, funciones...) este Kernel(núcleo) se puede RESET - los lenguajes que se debe declarar una variable antes van con RAM, y se declara para reservar un espacio"
+    "Apuntes: Python trabaja con un kernel(guarda variables, listas, funciones...) este Kernel se puede RESET - los lenguajes que se debe declarar una variable antes van con RAM, y se declara para reservar un espacio"
    ]
   },
   {
