--- a/functions.ipynb
+++ b/functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SEGUNDO DÍA DE CLASE"
+    "FILE DEDICADO A: IF/ELIF/ELSE, FUNCIONES, SPLIT, WHILE y otros filtros"
    ]
   },
   {
@@ -663,6 +663,65 @@
    "source": [
     "list= [15,24,78,63,57]\n",
     "recorrer_lista(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Función que serpara un texto entre espacios en blanco, slpit\n",
+    "\n",
+    "palabra= \"La próxima clase será jueves y la siguiente lunes, viernes no vengo\"\n",
+    "\n",
+    "lista= palabra.split()\n",
+    "lista[1]\n",
+    "#La función list nos muestra un objeto que contenga varios elementos\n",
+    "list(lista)\n",
+    "len(lista)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#El bucle infinito while (mientras), sirve cuando no sabemos de forma exacta el número de iteraciones que se deberán realizar\n",
+    "\n",
+    "i= 1\n",
+    "\n",
+    "while i<=3:\n",
+    "    print(i)\n",
+    "    i+=1\n",
+    "\n",
+    "while i<=len(lista):\n",
+    "    print(i)\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PRÁCTICA 1: MEDIANTE UN BUCLE  WHILE, IMPRIMIR EL VALOR DE UNA VARIABLE i SIEMPRE Y CUANDO SEA MENOR DE 50, PARTIREMOS DE i=3 INCREMENTAREMOS DE 3 EN 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#práctica 1\n",
+    "i= 3\n",
+    "\n",
+    "while i<50:\n",
+    "    print(i)\n",
+    "    i+=3\n",
+    "\n"
    ]
   }
  ],
